[package]
name = "rusty-java"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
toml = "0.8.20"
colored = "3.0.0"
clap = {version = "4.0", features = ["derive"]}
regex = "1.5.4"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.1.3"
serial_test = "1.0.0"
