[package]
name = "rsj"
version = "0.1.0"
edition = "2021"
description = "Rusty Java is a tool for using a Rust-like folder structure for Java projects."
license = "MIT"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
repository = "https://github.com/zanderlewis/rusty-java"
homepage = "https://zanderlewis.dev"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
toml = "0.8.20"
colored = "3.0.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.5.4"
walkdir = "2.3"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.1.3"
serial_test = "3.2.0"
